--- a/ml1/theory_1.tex
+++ b/ml1/theory_1.tex
@@ -57,50 +57,50 @@
 \frame{\titlepage}
 
 \section{ML Basics: Data, Model, Learner, ERM}
-\includepdf[pages={2-8}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-basics-nutshell.pdf}
+\includepdf[pages={2-8}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-basics-nutshell.pdf}
 
-%\includepdf[pages={3-4}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-basics-data.pdf}
-%\includepdf[pages={4}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-basics-nutshell.pdf}
-%\includepdf[pages={8-9}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-basics-models-parameters.pdf}
-%\includepdf[pages={2, 4-last}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-basics-learner.pdf}
-%\includepdf[pages={2}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-basics-riskminimization.pdf}
-%\includepdf[pages={7-8}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-basics-nutshell.pdf}
+%\includepdf[pages={3-4}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-basics-data.pdf}
+%\includepdf[pages={4}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-basics-nutshell.pdf}
+%\includepdf[pages={8-9}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-basics-models-parameters.pdf}
+%\includepdf[pages={2, 4-last}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-basics-learner.pdf}
+%\includepdf[pages={2}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-basics-riskminimization.pdf}
+%\includepdf[pages={7-8}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-basics-nutshell.pdf}
 
 
 %\section{Linear and Logistic Regression}
-%\includepdf[pages={2-5, 8}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-regression-nutshell.pdf}
-%\includepdf[pages={8-last}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-basics-riskminimization.pdf}
-\includepdf[pages={2-3}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-classification-nutshell.pdf}
-\includepdf[pages={6,7}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-classification-basicdefs.pdf}
-%\includepdf[pages={2}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-classification-logistic.pdf}
-%\includepdf[pages={5}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-classification-nutshell.pdf}
+%\includepdf[pages={2-5, 8}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-regression-nutshell.pdf}
+%\includepdf[pages={8-last}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-basics-riskminimization.pdf}
+\includepdf[pages={2-3}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-classification-nutshell.pdf}
+\includepdf[pages={6,7}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-classification-basicdefs.pdf}
+%\includepdf[pages={2}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-classification-logistic.pdf}
+%\includepdf[pages={5}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-classification-nutshell.pdf}
 %\section{The KNN Learner}
-%\includepdf[pages={2-6}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-knn.pdf}
+%\includepdf[pages={2-6}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-knn.pdf}
 
 \section{Learner Overview}
-\includepdf[pages={3-4,19-20,23-24,27-29,44-47}, trim=0mm 0mm 0mm 0mm, fitpaper=true]{../../material/lecture_i2ml/slides-pdf/slides-learners.pdf}
+\includepdf[pages={3-4,19-20,23-24,27-29,44-47}, trim=0mm 0mm 0mm 0mm, fitpaper=true]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-learners.pdf}
 
 
 \section{Performance Estimation}
-\includepdf[pages={2-3, 5}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-evaluation-generr.pdf}
-\includepdf[pages={2,5-6}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-evaluation-train.pdf}
-\includepdf[pages={2-5}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-evaluation-test.pdf}
-\includepdf[pages={4}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-evaluation-overfitting-underfitting.pdf}
+\includepdf[pages={2-3, 5}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-evaluation-generr.pdf}
+\includepdf[pages={2,5-6}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-evaluation-train.pdf}
+\includepdf[pages={2-5}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-evaluation-test.pdf}
+\includepdf[pages={4}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-evaluation-overfitting-underfitting.pdf}
 
 
 \section{Performance Measures}
-\includepdf[pages={9, 6}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-evaluation-nutshell.pdf}
-\includepdf[pages={8, 10, 3}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-evaluation-measures-classification.pdf}
-\includepdf[pages={2, 4, 7, 9, 10, 12}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-evaluation-rocbasics.pdf}
-\includepdf[pages={2, 6, 12-14, 16}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-evaluation-roccurves.pdf}
+\includepdf[pages={9, 6}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-evaluation-nutshell.pdf}
+\includepdf[pages={8, 10, 3}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-evaluation-measures-classification.pdf}
+\includepdf[pages={2, 4, 7, 9, 10, 12}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-evaluation-rocbasics.pdf}
+\includepdf[pages={2, 6, 12-14, 16}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-evaluation-roccurves.pdf}
 
-%\includepdf[pages={2-3, 5}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-evaluation-measures-regression.pdf}
-%\includepdf[pages={3}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-evaluation-measures-classification.pdf}
-%\includepdf[pages={7, 2-3, 10-11}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-evaluation-rocbasics.pdf}
-%\includepdf[pages={8}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-evaluation-measures-classification.pdf}
-%\includepdf[pages={12-13}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-evaluation-rocbasics.pdf}
+%\includepdf[pages={2-3, 5}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-evaluation-measures-regression.pdf}
+%\includepdf[pages={3}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-evaluation-measures-classification.pdf}
+%\includepdf[pages={7, 2-3, 10-11}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-evaluation-rocbasics.pdf}
+%\includepdf[pages={8}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-evaluation-measures-classification.pdf}
+%\includepdf[pages={12-13}, trim=0mm 0mm 45mm 0mm]{.../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-evaluation-rocbasics.pdf}
 %\section{Introduction to mlr3}
-%\includepdf[pages={7-8, 10-18, 24, 26, 30-31, 33-36, 39-40, 42, 44-53, 55-59, 62-65, 67-71, last}]{../../material/mlr-doc/CURRENT_mlr3_course/01_mlr3/mlr3-intro.pdf}
+%\includepdf[pages={7-8, 10-18, 24, 26, 30-31, 33-36, 39-40, 42, 44-53, 55-59, 62-65, 67-71, last}]{.../slds-lecture-pdfs/mlr-doc/CURRENT_mlr3_course/01_mlr3/mlr3-intro.pdf}
 %\section{Exercise: Train, predict, evaluate}
 %\begin{frame}{Exercise: Train, predict, evaluate}
 %File: \textit{day1\_train\_predict\_evaluate.html}
