Updates from Overleaf

--- a/ml1/theory_2.tex
+++ b/ml1/theory_2.tex
@@ -5,7 +5,7 @@
 %\usepackage{geometry}
 %\geometry{papersize={180mm, 135mm}, top=-1.5mm} % 210mm, 297mm
 
-\usepackage[nospeakermargin]{../../style/lmu-lecture}
+\usepackage[nospeakermargin]{../style/lmu-lecture}
 
 \setbeamertemplate{frametitle}{\expandafter\uppercase\expandafter\insertframetitle}
 %\useoutertheme{metropolis}
@@ -57,18 +57,18 @@
 \frame{\titlepage}
 
 \section{Resampling}
-\includepdf[pages={7}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-evaluation-generr.pdf}
-\includepdf[pages={2, 7, 4-6, 8-9}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-evaluation-resampling-1.pdf}
-\includepdf[pages={12-14}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-evaluation-test.pdf}
-\includepdf[pages={2-4,8-10}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-evaluation-resampling-2.pdf}
+\includepdf[pages={7}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-evaluation-generr.pdf}
+\includepdf[pages={2, 7, 4-6, 8-9}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-evaluation-resampling-1.pdf}
+\includepdf[pages={12-14}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-evaluation-test.pdf}
+\includepdf[pages={2-4,8-10}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-evaluation-resampling-2.pdf}
 %\section{Resampling with mlr3}
-%\includepdf[pages={3, 5, 8-9, 11, 13, 18-23, 27-31}]{../../material/mlr-doc/CURRENT_mlr3_course/01_mlr3/mlr3-resampling.pdf}
+%\includepdf[pages={3, 5, 8-9, 11, 13, 18-23, 27-31}]{../slds-lecture-pdfs/mlr-doc/CURRENT_mlr3_course/01_mlr3/mlr3-resampling.pdf}
 %\section{Exercise: Resampling with mlr3}
 %\begin{frame}{Exercise: Resampling with mlr3}
 %File: \textit{day1\_resampling.html}
 %\end{frame}
 %\section{Benchmarking with mlr3}
-%\includepdf[pages={33-36, 40-41, 43, 45-46, last}]{../../material/mlr-doc/CURRENT_mlr3_course/01_mlr3/mlr3-resampling.pdf}
+%\includepdf[pages={33-36, 40-41, 43, 45-46, last}]{../slds-lecture-pdfs/mlr-doc/CURRENT_mlr3_course/01_mlr3/mlr3-resampling.pdf}
 %\section{Exercise: Benchmarking with mlr3}
 %\begin{frame}{Exercise: Benchmarking with mlr3}
 %File: \textit{day1\_benchmarking.html}
