--- a/ml1/theory_3.tex
+++ b/ml1/theory_3.tex
@@ -5,7 +5,7 @@
 %\usepackage{geometry}
 %\geometry{papersize={180mm, 135mm}, top=-1.5mm} % 210mm, 297mm
 
-\usepackage[nospeakermargin]{../../style/lmu-lecture}
+\usepackage[nospeakermargin]{../style/lmu-lecture}
 
 \setbeamertemplate{frametitle}{\expandafter\uppercase\expandafter\insertframetitle}
 %\useoutertheme{metropolis}
@@ -57,22 +57,22 @@
 \frame{\titlepage}
 
 \section{Hyperparameter Tuning}
-\includepdf[pages={2-last}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-tuning-intro.pdf}
-\includepdf[pages={2-last}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-tuning-tuningproblem.pdf}
-\includepdf[pages={2-last}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-tuning-basicalgos.pdf}
-\includepdf[pages={2-last}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-tuning-advanced.pdf}
+\includepdf[pages={2-last}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-tuning-intro.pdf}
+\includepdf[pages={2-last}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-tuning-tuningproblem.pdf}
+\includepdf[pages={2-last}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-tuning-basicalgos.pdf}
+\includepdf[pages={2-last}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-tuning-advanced.pdf}
 %\section{Tuning with mlr3tuning}
-%\includepdf[pages={6-7, 12-19, 22, 24-30, 32-35, 38-40, 43-52}]{../../material/mlr-doc/CURRENT_mlr3_course/02_mlr3tuning/mlr3tuning.pdf}
+%\includepdf[pages={6-7, 12-19, 22, 24-30, 32-35, 38-40, 43-52}]{../slds-lecture-pdfs/mlr-doc/CURRENT_mlr3_course/02_mlr3tuning/mlr3tuning.pdf}
 %\section{Exercise: Tuning with mlr3tuning}
 %\begin{frame}{Exercise: Tuning with mlr3tuning}
 %File: \textit{day2\_tuning.html}
 %\end{frame}
 \section{Nested Resampling}
-\includepdf[pages={2-last}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-nested-nestedintro.pdf}
-\includepdf[pages={2-last}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-nested-trainvalidtest.pdf}
-\includepdf[pages={2-last}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-nested-nestedresampling.pdf}
+\includepdf[pages={2-last}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-nested-nestedintro.pdf}
+\includepdf[pages={2-last}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-nested-trainvalidtest.pdf}
+\includepdf[pages={2-last}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-nested-nestedresampling.pdf}
 
 \section{Pipelines and AutoML}
-\includepdf[pages={2-last}, trim=0mm 0mm 45mm 0mm]{../../material/lecture_i2ml/slides-pdf/slides-tuning-pipelines.pdf}
+\includepdf[pages={2-last}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-tuning-pipelines.pdf}
 
 \end{document}
