--- a/style/lmu-lecture.sty
+++ b/style/lmu-lecture.sty
@@ -285,36 +285,36 @@
 \def\addjustlectureframenumber#1{\ifx#1\relax\else%
   \addtocounter{lectureframenumber}{-\lectureref{lect:@@\thelecture}}\fi}
 
-\defbeamertemplate*{footline}{lecture theme}
-{
-  \usebeamerfont{footline} %author in head/foot}
-  \setcounter{lectureframenumber}{\insertframenumber}%
-  \ifnum\c@lecture<0\else \expandafter\addjustlectureframenumber\csname r@lect:@@\thelecture\endcsname\fi%
-  \leavevmode%
-  \hbox{%
-    \setbox\beamer@linebox=\hbox to\slidewidth{%
-      \hskip 1em%
-      {\usebeamercolor[fg]{author in head/foot}%
-      \insertshortauthor~~\copyright~~\insertshortdate}\hfill%
-      {\usebeamercolor[fg]{title in head/foot}%
-      \inserttitle~~--~~}%
-      \ifnum\c@lecture>0%
-        {\usebeamercolor[fg]{section in head/foot}%
-          \arabic{lecture}~~--~~}%
-      \fi%
-      {\usebeamercolor[fg]{framenumber in head/foot}%
-        \thelectureframenumber~/~%
-        \ifnum\c@lecture<0 \inserttotalframenumber\else\lectureref{endlect:@@\thelecture}\fi%
-      }%
-      \hskip 1em}%
-    \ht\beamer@linebox=2.5mm%
-    \dp\beamer@linebox=0pt%
-    \setbox\beamer@linebox=\vbox{\box\beamer@linebox\vskip1.125ex}%
-    \rule[4.5mm]{\slidewidth}{0.5pt}%
-    %%
-    \hskip-\slidewidth%
-    \hbox{\box\beamer@linebox\hfill}}
-}
+% \defbeamertemplate*{footline}{lecture theme}
+% {
+%   \usebeamerfont{footline} %author in head/foot}
+%   \setcounter{lectureframenumber}{\insertframenumber}%
+%   \ifnum\c@lecture<0\else \expandafter\addjustlectureframenumber\csname r@lect:@@\thelecture\endcsname\fi%
+%   \leavevmode%
+%   \hbox{%
+%     \setbox\beamer@linebox=\hbox to\slidewidth{%
+%       \hskip 1em%
+%       {\usebeamercolor[fg]{author in head/foot}%
+%       \insertshortauthor~~\copyright~~\insertshortdate}\hfill%
+%       {\usebeamercolor[fg]{title in head/foot}%
+%       \inserttitle~~--~~}%
+%       \ifnum\c@lecture>0%
+%         {\usebeamercolor[fg]{section in head/foot}%
+%           \arabic{lecture}~~--~~}%
+%       \fi%
+%       {\usebeamercolor[fg]{framenumber in head/foot}%
+%         \thelectureframenumber~/~%
+%         \ifnum\c@lecture<0 \inserttotalframenumber\else\lectureref{endlect:@@\thelecture}\fi%
+%       }%
+%       \hskip 1em}%
+%     \ht\beamer@linebox=2.5mm%
+%     \dp\beamer@linebox=0pt%
+%     \setbox\beamer@linebox=\vbox{\box\beamer@linebox\vskip1.125ex}%
+%     \rule[4.5mm]{\slidewidth}{0.5pt}%
+%     %%
+%     \hskip-\slidewidth%
+%     \hbox{\box\beamer@linebox\hfill}}
+% }
 
 % ------------------------------------------------------------------------
 % Navigation symbols
