--- a/ml3/ml3.tex
+++ b/ml3/ml3.tex
@@ -86,7 +86,7 @@
 
 % \includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-cart-computationalaspects.pdf}
 
-\includepdf[pages=1-4, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-cart-stoppingpruning.pdf}
+\includepdf[pages={1-4}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-cart-stoppingpruning.pdf}
 
 \includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_i2ml/slides-pdf/slides-cart-discussion.pdf}
 
@@ -104,19 +104,19 @@
 
 
 
-\includepdf[pages=2,3,4, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-boosting-intro-adaboost.pdf}
+\includepdf[pages={2,3,4}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-boosting-intro-adaboost.pdf}
 
-\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-boosting-gradient-boosting-concept.pdf}
+\includepdf[pages={1-15}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-boosting-gradient-boosting-concept.pdf}
 
-\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-boosting-regression-illustrations.pdf}
+%\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-boosting-regression-illustrations.pdf}
 
 \includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-boosting-gbm-regularization.pdf}
 
-\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-boosting-gbm-classification.pdf}
+\includepdf[pages={1,2,3,10}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-boosting-gbm-classification.pdf}
 
-\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-boosting-gbm-with-trees-1.pdf}
+\includepdf[pages={1,2,9-last}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-boosting-gbm-with-trees-1.pdf}
 
-\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-boosting-gbm-with-trees-2.pdf}
+%\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-boosting-gbm-with-trees-2.pdf}
 
 \includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-boosting-xgboost.pdf}
 
