--- a/ml6/ml6.tex
+++ b/ml6/ml6.tex
@@ -76,51 +76,48 @@
 
 \frame{\titlepage}
 
-\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-regu-intro.pdf}
 
-\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-regu-l2.pdf}
+\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-linsvm-hard-margin.pdf}
 
-\includepdf[pages={1-6,8}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-regu-l1.pdf}
+%\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-linsvm-hard-margin-dual.pdf}
 
-\includepdf[pages={1,3,4,5,7,9}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-regu-l1vsl2.pdf}
+\includepdf[pages={1-5}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-linsvm-soft-margin.pdf}
 
-\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-regu-enetlogreg.pdf}
+\includepdf[pages={1,2,4-last}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-linsvm-erm.pdf}
 
-%\subsection{Regularization for Underdetermined Problem}
-%\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-regu-underdetermined.pdf}
-
-
-%\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-regu-others.pdf}
-
-%%%%%%%%%%%%%%%%%%%%%
-
-\includepdf[pages={1-17}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-regu-nonlin.pdf}
-
-%\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-regu-bayes.pdf}
-
-%\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-regu-wd-vs-l2.pdf}
-
-%\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-regu-geom-l2.pdf}
-
-%\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-regu-geom-l1.pdf}
-
-\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-regu-early-stopping.pdf}
-
-%\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-regu-ridge-deepdive.pdf}
-
-%\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-regu-lasso-deepdive.pdf}
+%\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-linsvm-optimization.pdf}
 
 
 
-\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-fs-introduction.pdf}
 
-\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-fs-motivating-examples.pdf}
+\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-nonlinsvm-featuregen.pdf}
 
-\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-fs-filters1.pdf}
+\includepdf[pages={1,2,3,5,7,8,9,10,14}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-nonlinsvm-kernel-trick.pdf}
 
-\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-fs-filters2.pdf}
+\includepdf[pages={4-last}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-nonlinsvm-kernel-poly.pdf}
 
-\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-fs-wrapper.pdf}
+%\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-nonlinsvm-rkhs-repr.pdf}
+
+\includepdf[pages={11,12}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-nonlinsvm-kernel-rbf.pdf}
+
+\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-nonlinsvm-modelsel.pdf}
+
+%\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-nonlinsvm-uniapprox.pdf}
+
+
+
+
+\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-gp-basic.pdf}
+
+\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-gp-covariance.pdf}
+
+%\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-gp-bayes-lm.pdf}
+
+\includepdf[pages={1-26}, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-gp-prediction.pdf}
+
+%\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-gp-training.pdf}
+
+%\includepdf[pages=-, trim=0mm 0mm 45mm 0mm]{../slds-lecture-pdfs/lecture_sl/slides-pdf/slides-gp-mean.pdf}
 
 \end{document}
 
